@@ -18,6 +18,7 @@ Improvements:
 
 Bug fixes:
 
+ - Fix segfault when sorting the branch view by author.
  - Expand %(directory) to . for the root directory. (GH-3)
  - Accept 'utf-8' for the line-graphics option as indicated in the docs.
 
